2006-03-22  lav

	* block.cc: fixed delete for rectangular blocks with multibyte chars.
	* clipbrd.cc: fixed copy/paste for rectangular blocks with multibyte chars.
	* mb.cc, mb.h: mb_to_wc new function; define MB_CUR_MAX when unavailable.
	* user.cc: fixed text optimization.
	* edit.cc: fixed history truncation.

2005-07-18  lav

	* keymapdf.cc: added shift-begin/end key codes (for linux console hack);
	  added control-pgup/pgdn xterm key codes.

2005-07-08  lav

	* getch.cc: fix code generation for linux console.
	* keymapdf.cc: add redhat-modified xterm codes.

2005-06-20  lav

	* keymapdf.cc: add rxvt codes; use shifted terminfo codes as block
	  marking actions (reflecting new trend in terminfo).
	* edit.cc, user.cc, user.h: add history for shell and pipe commands.
	* history.cc: fixed reading InodeHistory - removed extra fgetc.

2005-05-31  lav

	* kern.cc: (InsertBlock) fix line numbering of CurrentPos,
	  (ReplaceBlock) fix column numbering for replaced wide chars.
	* mb.cc, mb.h: add validity flag WCharValid, fixed compilation
	  without wide chars.
	* screen.cc: don't reassign ScreenTop each time.
	* textpoin.cc: (FindLineCol) fixed a nasty bug; little optimization.
	* user.cc: (UserReplaceChar) fixed for wide chars.

2005-05-01  lav

	* screen.cc: fix shadowing of last char on lines longer than screen
	  width for wide chars.

2005-04-26  lav

	* window.h: use ACS instead of WACS when not in mb_mode (for some
	  reason WACS are output without acs mode - ncurses bug?).

2005-04-19  lav

	* file.cc, menu.cc, menu1.cc, screen.cc, window.cc, window.h:
	  (PutACS) new macro; use it; use WACS_* when in mb_mode.
	* format.cc: fixed handling of inter-paragraph blank lines.

2005-04-08  lav

	* block.cc: fix tolower/toupper/exchange for multibyte chars.
	* screen.cc: skip screen update up to 80 chars, or when line changes.
	* loadsave.cc: add includes for freebsd.
	* mb.cc, mb.h: add ReplaceWCharMove function.

2005-03-23  lav

	* block.cc: use Space function.
